--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,11 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+$material-light: (
+  'background': #a1a1a1,
+);
+
+$material-dark: (
+  'background': #292939,
+);
