Validaciones, flu8jo, estetica, con el Gonzalete

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -4,9 +4,9 @@
 // $font-size-root: 20px;
 
 $material-light: (
-  'background': #a1a1a1,
+  'background-color': #998a8a,
 );
 
 $material-dark: (
-  'background': #292939,
+  'background-color': #343444,
 );
